ajuste crud plano

--- a/EPharma.Data/EPharma.Data.csproj
+++ b/EPharma.Data/EPharma.Data.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\EPharma.Business\EPharma.Business.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
